--- a/project/main.html
+++ b/project/main.html
@@ -12,9 +12,9 @@
         <div class="button-container">
             <a href="menu.php" class="button">Menu</a>
             <a href="order-check.php" class="button">Order</a>
-            <a href="reservation.html" class="button">Reservation</a>
-            <a href="register.html" class="button">Registration</a>
-            <a href="signin.html" class="button">Sign in</a>
+            <a href="reservation.php" class="button">Reservation</a>
+            <a href="register.php" class="button">Registration</a>
+            <a href="signin.php" class="button">Sign in</a>
         </div>
     </header>
     <main>
