--- a/project/registersignin.html
+++ b/project/registersignin.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Sign in</h1>
+        <h1>Authorization</h1>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
         <div class="button-container">
             <a href="main.html" class="button">Main</a>
@@ -15,15 +15,10 @@
         </div>
     </header>
     <main>
-        <form action="signin.php" method="post">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="example@example.com" required><br>
+        <div class="button-container">
+            <a href="register.html" class="button">Registrarion</a>
+            <a href="signin.html" class="button">Sign in</a>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" pattern="[A-Za-z0-9]+"  name="password" placeholder="Only letters and numbers" required><br>
-
-            <input type="submit" class="submit" value="Sign in" >
-        </form>
     </main>
     <footer>
         <p>© 2 0 2 4 </p>
